x-mirror fails in armature with a partially mirrored chain #42334

Closed
opened 2014-10-21 15:54:49 +02:00 by Daniel Salazar · 6 comments
Member

Blender Version
Broken: 13e9c44
Worked: (optional)

Short description of error
partially mirrored chains give errors on escaping x-mirror transform

Exact steps for others to reproduce the error
Move selected bone and Esc x-mirror.blend

**Blender Version** Broken: 13e9c44 Worked: (optional) **Short description of error** partially mirrored chains give errors on escaping x-mirror transform **Exact steps for others to reproduce the error** Move selected bone and Esc [x-mirror.blend](https://archive.blender.org/developer/F118863/x-mirror.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by 769c0bee9f

This issue was referenced by 769c0bee9fafec1ffce05af4e0d1f443dfb95ed7
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 769c0bee9f.

Closed by commit 769c0bee9f.
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#42334
No description provided.