Fix T42334: x-mirror fails in armature with a partially mirrored chain.

When resetting edit bones on cancel, they also have to reset connected
parent and child bone tips and heads respectively, since these can be
modified during the transform.